k8s/mlflow/mlflow-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mlflow-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/proxy-ssl-verify: 'false'
    nginx.ingress.kubernetes.io/proxy-body-size: "1g"
#    nginx.ingress.kubernetes.io/ssl-redirect: 'false'
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  rules:
  - host: mlflow.k8s_domain
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: mlflow-tracking
            port:
              number: 80
  tls:
  - hosts:
      - mlflow.k8s_domain
    secretName: mlflow-ingress-tls
